--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,13 +32,16 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
-    display: inline-block;
+/* changed display to inline after changing the div's to nav tags */
+
+.header nav li {
+    display: inline;
     margin-left: 25px;
+    float: right;
 }
 
 a {
